fallback to OpenCommand config, if Desktop.open() fails